# example_mega_project

./: .bazelrc  .gitignore  WORKSPACE
GearsBot-cpp/: BUILD.bazel
GearsBot-cpp/.wpilib/: wpilib_preferences.json
GearsBot-java/: BUILD.bazel
GearsBot-java/src/main/java/frc/robot/: RobotContainer.java
GearsBot-java/src/main/java/frc/robot/commands/: Autonomous.java  DriveStraight.java  SetDistanceToBox.java  TankDrive.java
GearsBot-java/src/main/java/frc/robot/subsystems/: Claw.java  DriveTrain.java  Elevator.java  Wrist.java
tools/: BUILD
vendordeps/: BUILD  load_vendordeps.bzl  setup_vendordeps.bzl
